# SMAX_tray

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp  resource.h  resources.rc
Checker/: Checker.cpp  Checker.h  Requestor.cpp  Requestor.h
TokenInitializer/: TokenDialog.rc  TokenInitializer.cpp  TokenInitializer.h
Utils/: Utils.cpp  Utils.h
